[package]
name = "flashpaper-rs"
version = "0.1.0"
authors = ["Jeff Rade <jeffrade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aes = "^0.7"
aes-gcm = "^0.9"
base64 = "^0.13"
bcrypt = "^0.10"
block-modes = "^0.8"
hex = "^0.4"
rand = { version = "^0.8", features = ["std_rng"] }
rand_chacha = "^0.3"
rusqlite = "^0.25"
serde_json = "^1.0"
rouille = "^3.1"

