[package]
name = "flashpaper-rs"
version = "0.1.0"
authors = ["Jeff Rade <jeffrade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "^0.9"
argon2 = "^0.4" # Argon2i uses data-independent memory access, which is preferred for password hashing and password-based key derivation
base64 = "^0.13"
block-modes = "^0.9"
hex = "^0.4"
rand = { version = "^0.8", features = ["std_rng"] }
rand_chacha = "^0.3"
rusqlite = "^0.27"
serde_json = "^1.0"
rouille = "^3.5"
